# ShowtimePlugin-Midi

./: CMakeLists.txt
cmake/: FindRtMidi.cmake  FindteVirtualMidiSDK.cmake
midi_maps/: kaossilator_pro.json  minilouge.json
src/: EchoMidiApp.cpp  Midi2DCC.cpp  Midi2DCC.h  MidiBidirectionalPort.cpp  MidiBidirectionalPort.h  MidiCCGroup.cpp  MidiCCGroup.h  MidiConstants.h  MidiFactory.cpp  MidiFactory.h  MidiInPort.cpp  MidiInPort.h  MidiOutPort.cpp  MidiOutPort.h  RtMidiBidirectionalPort.cpp  RtMidiBidirectionalPort.h  RtMidiInPort.cpp  RtMidiInPort.h  RtMidiOutPort.cpp  RtMidiOutPort.h  VirtualMidi.cpp  VirtualMidi.h  plugin.cpp  plugin.h
tests/: CMakeLists.txt  TestPlugin.cpp
